--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -32,18 +32,18 @@ $success: #84b84c ;
 $error: #f00 ;
 
 // Responsive down size
-$media-breakpoint-down-xs: 413.98px;
-$media-breakpoint-down-sm: 573.98px;
-$media-breakpoint-down-md: 767.98px;
-$media-breakpoint-down-lg: 991.98px;
-$media-breakpoint-down-xl: 1199.98px;
+$media-breackpoint-down-xs: 413.98px;
+$media-breackpoint-down-sm: 573.98px;
+$media-breackpoint-down-md: 767.98px;
+$media-breackpoint-down-lg: 991.98px;
+$media-breackpoint-down-xl: 1199.98px;
 
 // Responsive up size
-$media-breakpoint-up-xs: 320px;
-$media-breakpoint-up-sm: 576px;
-$media-breakpoint-up-md: 768px;
-$media-breakpoint-up-lg: 992px;
-$media-breakpoint-up-xl: 1200px;
+$media-breackpoint-up-xs: 320px;
+$media-breackpoint-up-sm: 576px;
+$media-breackpoint-up-md: 768px;
+$media-breackpoint-up-lg: 992px;
+$media-breackpoint-up-xl: 1200px;
 
 
 
