--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -26,7 +26,7 @@ $background-grey-dark: #000;
 $background-dark-light: #252527;
 $background-dark: #000;
 $background-success: #84b84c1f;
-$background-dark: #ff00001f;
+$background-error: #ff00001f;
 
 $success: #84b84c ;
 $error: #f00 ;
